@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: format.test,v 1.11 2002/06/22 04:19:47 dgp Exp $
+# RCS: @(#) $Id: format.test,v 1.12 2003/03/14 16:28:07 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -501,6 +501,9 @@ test format-17.2 {testing %ld with wide} {64bitInts} {
 test format-17.3 {testing %ld with non-wide} {64bitInts} {
     format %ld 42
 } 42
+test format-17.4 {testing %l with non-integer} {
+    format %lf 1
+} 1.000000
 
 # cleanup
 catch {unset a}
